fix: contrast fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,16 +1,4 @@
 
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 100vh;
-  z-index: -10;
-  overflow-y: hidden;
-    max-height: 100vh;
-  background-color: var(--contrast-color);
-}
 
 .container {
   display: flex;
